--- a/views/admin/users/login.ejs
+++ b/views/admin/users/login.ejs
@@ -1,5 +1,5 @@
 <%- include ('../../partials/header.ejs') %>
-<%- include ('../../partials/navbar.ejs') %>
+<!-- <%- include ('../../partials/navbar.ejs') %> -->
 
 <div class="container"> 
 
@@ -9,7 +9,7 @@
             <h2>Login</h2>
         </div>
         <div class="card-body">
-                <form method="POST" action="/users/create">
+                <form method="POST" action="/authenticate">
                     <input class="form-control" type="email" name="email" placeholder="insira seu e-mail, email@exemplo.com"><br>
                     <input class="form-control" type="password" name="password" placeholder="digite sua senha"><br>
                     <button type="submit" class="btn btn-success btn-block">Entrar</button>
