--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -3,7 +3,12 @@
         Guiapress
     </a>
     <ul class="navbar-nav mr-auto">
-        
+        <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/admin/users/create">Cadastrar</a>
+        </li>
         <% categories.forEach(category => { %>
             <li class="nav-item">
                 <a class="nav-link" href="/category/<%= category.slug %>"><%= category.title %></a>
