--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="/">
-        Guiapress
-    </a>
+    <a class="navbar-brand" href="/">Guiapress</a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href="/admin/categories">Categorias</a>
@@ -10,4 +8,12 @@
             <a class="nav-link" href="/admin/articles">Artigos</a>
         </li>
     </ul>
+
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/logout">Sair</a>
+        </li>
+    </ul>
+
 </nav>
+
